--- a/themes/mypiggyback/assets/css/_page.css
+++ b/themes/mypiggyback/assets/css/_page.css
@@ -90,10 +90,15 @@
 .breadcumbs ul li:last-child:after{
 	content: none;
 }
-.breadcumbs ul li a{
+.breadcumbs ul li a,
+.breadcumbs ul li span{
 	color: #fff;
 	font-family: 'GoboldRegular';
 	text-transform: uppercase;
+}
+.breadcumbs ul li span{
+	display: inline-block;
+	vertical-align: baseline;
 }
 .breadcumbs ul li a:hover{
 	color: #141414;
