--- a/themes/mypiggyback/assets/css/_page.css
+++ b/themes/mypiggyback/assets/css/_page.css
@@ -100,6 +100,7 @@
 	display: inline-block;
 	vertical-align: baseline;
 }
+.breadcumbs ul li a:hover span,
 .breadcumbs ul li a:hover{
-	color: #141414;
+	color: #fccacb!important;
 }
