--- a/themes/mypiggyback/assets/css/_home-3.css
+++ b/themes/mypiggyback/assets/css/_home-3.css
@@ -175,12 +175,12 @@
 	margin-top: 75px;
 }
 
-.fl-tab-content{
+/*.fl-tab-content{
 	display: none;
 }
 .fl-tab-content.current{
 	display: block;
-}
+}*/
 .vehicle-form{
 	padding: 29px 30px;
 }
