--- a/themes/mypiggyback/assets/css/_about.css
+++ b/themes/mypiggyback/assets/css/_about.css
@@ -61,6 +61,7 @@
 	max-width: 80%;
 	width: 100%;
 	max-height: 610px;
+	z-index: 1;
 }
 .mbp-about-num-lft-bg img{
 	max-height: 610px;
@@ -70,6 +71,7 @@
 	padding-top: 120px;
 	padding-bottom: 110px;
 	position: relative;
+	z-index: 2;
 }
 .mbp-about-num-lft-bg-color{
 	
