--- a/themes/mypiggyback/assets/css/_services.css
+++ b/themes/mypiggyback/assets/css/_services.css
@@ -1,6 +1,7 @@
 .services-item-cntrl{
 	display: flex;
 	padding-top: 65px;
+	align-items: center;
 }
 .serv-fea-img{
 	display: flex;
@@ -29,6 +30,7 @@
 }
 .sic{
 	width: 50%;
+	padding-right: 20px;
 	display: flex;
 	align-items: center;
 	padding-left: 51px;
@@ -62,7 +64,7 @@
 }
 .services-item-cntrl:nth-child(2n+2) .sic{
 	order: 1;
-	padding-left: 0;
+	padding-left: 20px;
 	padding-right: 50px;
 }
 .services-item-cntrl:nth-child(2n+2) .sic .sic-des{
@@ -112,6 +114,9 @@
 	.services-item-cntrl:nth-child(2n+2) .sic{
 		padding-right: 38px;
 	}
+	.services-item-cntrl:nth-child(2n+2) .serv-fea-img .s-f-img-cntrl{
+		margin-left: 0;
+	}
 	.sic-des{
 		max-width: 495px;
 	}
@@ -120,7 +125,6 @@
 		line-height: 1.2;
 	}
 	.sic-des p{
-		line-height: 1.6;
 		margin-bottom: 25px;
 	}
 }
@@ -133,7 +137,6 @@
 		margin-bottom: 20px;
 	}
 	.sic-des p{
-		line-height: 1.4;
 		margin-bottom: 20px;
 	}
 	.emrs {
@@ -147,12 +150,44 @@
 }
 
 @media(max-width: 991px){
-
-	
+	.sic, 
+	.services-item-cntrl:nth-child(2n+2) .sic{
+		padding-left: 25px;
+	}
+	.sic-des .sic-title{
+		font-size: 30px;
+	}
+	.emrs{
+		width: 87px;
+		height: 87px;
+	}
+	svg.Icon-1, svg.Icon-2, svg.Icon-3, svg.Icon-4{
+		width: 58px;
+	}
 }
 
 @media(max-width: 767px){
-
+	.services-item-cntrl{
+		display: block;
+		padding: 20px;
+	}
+	.serv-fea-img{
+		width: 100%;
+		padding-bottom: 30px;
+	}
+	.sic{
+		width: 100%;
+	}
+	.sic, .services-item-cntrl:nth-child(2n+2) .sic{
+		padding-left: 0;
+		padding-right: 0;
+	}
+	.services-item-cntrl:nth-child(2n+2) .serv-fea-img .s-f-img-cntrl .emrs{
+		left: initial;
+	}
+	.sic-des{
+		max-width: 100%;
+	}
 }
 
 @media(max-width: 575px){
@@ -161,7 +196,13 @@
 }
 
 @media(max-width: 479px){
-
+	.emrs{
+		width: 70px;
+		height: 70px;
+	}
+	svg.Icon-1, svg.Icon-2, svg.Icon-3, svg.Icon-4{
+		width: 40px;
+	}
 
 }
 
