--- a/themes/mypiggyback/assets/css/_commons.css
+++ b/themes/mypiggyback/assets/css/_commons.css
@@ -39,7 +39,7 @@ strong{
 }
 ::selection {
   color: #fff;
-  background: #512C36;
+  background: #fccacb;
 }
 /*-- app gap use pattern --*/
 /*data-xxs = 575
