--- a/themes/mypiggyback/assets/css/_footer.css
+++ b/themes/mypiggyback/assets/css/_footer.css
@@ -51,7 +51,7 @@
 	vertical-align: baseline;
 	margin-left: -25px;
 }
-.ftr-logo span{
+.ftr-logo-title{
 	display: inline-block;
 	vertical-align: baseline;
 	font-size: 12px;
@@ -74,24 +74,7 @@
 	padding-bottom: 20px;
 	position: relative;
 }
-.ftr-menu-phn i,
-.ftr-menu-mail i{
-	position: absolute;
-	top: 50%;
-	left: 0;
-	transform: translateY(-50%);
-	-webkit-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	margin-top: -7px;
-	color: #fff;
-}
-.ftr-menu-location i{
-	position: absolute;
-	top: 0;
-	left: 0;
-	margin-top: 5px;
-	color: #fff;
-}
+
 
 .ftr-menu-phn a,
 .ftr-menu-mail a,
@@ -102,11 +85,29 @@
 .ftr-menu-location a{
 	line-height: 2.42;
 }
+.ftr-menu-phn i,
+.ftr-menu-mail i{
+	position: absolute;
+	top: 50%;
+	left: 0;
+	transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	margin-top: -9px;
+	color: #fff;
+}
+.ftr-menu-location i{
+	position: absolute;
+	top: 0;
+	left: 0;
+	margin-top: 2px;
+	color: #fff;
+}
 
 .ftr-menu-phn a:hover,
 .ftr-menu-mail a:hover,
 .ftr-menu-location a:hover{
-	color: #141414;
+	color: #FCCACA;
 }
 
 .ftr-menu-socials-media > ul{
@@ -125,7 +126,7 @@
 	color: #fff;
 }
 .ftr-menu-socials-media > ul > li > a:hover{
-	color: #141414;
+	color: #FCCACA;
 }
 
 
@@ -142,7 +143,7 @@
 	-webkit-transform: translateY(-50%);
 	-ms-transform: translateY(-50%);
 	color: #fff;
-	margin-top: -8.5px;
+	margin-top: -7.5px;
 }
 
 .ftr-menu > ul > li > a{
@@ -153,7 +154,7 @@
 	line-height: 1;
 }
 .ftr-menu > ul > li > a:hover{
-	color: #141414;
+	color: #FCCACA;
 }
 
 .ftr-search-box{
@@ -270,5 +271,5 @@
 	color: #fff;
 }
 .ftr-btm-menu ul li a:hover{
-	color: #D61225;
+	color: #FCCACA;
 }
