--- a/themes/mypiggyback/assets/css/_services.css
+++ b/themes/mypiggyback/assets/css/_services.css
@@ -134,7 +134,7 @@
 		max-width: 440px;
 	}
 	.sic-des .sic-title{
-		margin-bottom: 20px;
+		margin-bottom: 30px;
 	}
 	.sic-des p{
 		margin-bottom: 20px;
@@ -150,9 +150,14 @@
 }
 
 @media(max-width: 991px){
-	.sic, 
-	.services-item-cntrl:nth-child(2n+2) .sic{
+	.sic {
 		padding-left: 25px;
+	} 
+	.services-item-cntrl:nth-child(2n+2) .sic{
+		padding-left: 20px;
+	}
+	.services-item-cntrl:nth-child(2n+2) .sic{
+		padding-right: 25px;
 	}
 	.sic-des .sic-title{
 		font-size: 30px;
@@ -169,11 +174,11 @@
 @media(max-width: 767px){
 	.services-item-cntrl{
 		display: block;
-		padding: 20px;
+		padding: 50px 20px 0;
 	}
 	.serv-fea-img{
 		width: 100%;
-		padding-bottom: 30px;
+		padding-bottom: 37px;
 	}
 	.sic{
 		width: 100%;
@@ -181,12 +186,15 @@
 	.sic, .services-item-cntrl:nth-child(2n+2) .sic{
 		padding-left: 0;
 		padding-right: 0;
-	}
+	}	
 	.services-item-cntrl:nth-child(2n+2) .serv-fea-img .s-f-img-cntrl .emrs{
 		left: initial;
 	}
 	.sic-des{
 		max-width: 100%;
+	}
+	.sic-des p{
+		margin-bottom: 35px;
 	}
 }
 
