--- a/themes/mypiggyback/assets/css/_contact.css
+++ b/themes/mypiggyback/assets/css/_contact.css
@@ -6,20 +6,27 @@ Contact page
 .contact-form-sec-wrp{
 	position: relative;
 }
-.contat-frm-wrp{
-	width: 100%;
-	max-width: 470px;
-	float: right;
-	padding-right: 30px;
-	padding-top: 80px;
+.contact-form-sec{
+	position: relative;
+	z-index: 3;
+	min-height: 700px;
+}
+.contat-frm-wrp {
+    padding-right: 30px;
+    padding-top: 80px;
+    width: 41.5%;
 }
 .contat-frm-lft{
 	width: 45%;
 	float: left;
 }
-.contact-map{
-	width: 55%;
-	float: right;
+.contact-map {
+    width: 55%;
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 1;
 }
 .contact-title {
     padding-left: 60px;
@@ -227,28 +234,15 @@ we-accept-sec-wrp
  Responsive Css
 ----------------
 */
-@media(max-width: 1799px){
-	.contat-frm-wrp{
-		max-width:480px;
-	}
-}
-@media(max-width: 1599px){
-}
-
-@media(max-width: 1499px){
-	.contat-frm-wrp {
-	    max-width: 495px;
-	}
-}
 
 @media(max-width: 1399px){
-	.contat-frm-wrp {
-	    max-width: 505px;
-	}
+	
 }
 
 @media(max-width: 1299px){
-
+	.we-accept-rgt ul li {
+	    padding: 0 4px;
+	}
 }
 
 @media(max-width: 1199px){
@@ -258,6 +252,7 @@ we-accept-sec-wrp
 	}
 	.contact-title {
 	    margin-bottom: 20px;
+	    padding-left: 50px;
 	}
 	.contact-info-sec-wrp {
 	    padding: 100px 0 120px;
@@ -293,6 +288,9 @@ we-accept-sec-wrp
 	.we-accept-sec-wrp {
 	    padding: 50px 0;
 	}
+	.contat-frm-dsc p {
+	    line-height: 1.8;
+	}
 
 }
 
@@ -326,6 +324,16 @@ we-accept-sec-wrp
 	    width: 50%;
 	    padding: 0 25px 30px;
 	}
+	.contact-title.fl-h2{
+		font-size: 33px;
+	}
+	.contact-title {
+	    padding-left: 45px;
+	}
+	.contact-info-title {
+	    margin-bottom: 65px;
+	    padding-left: 50px;
+	}
 }
 
 @media(max-width: 767px){
@@ -343,6 +351,13 @@ we-accept-sec-wrp
 	}
 	.contact-map {
 	    width: 100%;
+	    position: static;
+	}
+	.contat-frm-cntlr{
+		width: 100% !important;
+	}
+	.contact-form-sec {
+	    min-height: auto;
 	}
 	.contact-map iframe{
 		height: 390px;
@@ -353,15 +368,9 @@ we-accept-sec-wrp
 	    background: #fff;
 	    padding-left: 20px;
 	    padding-right: 20px;
-	}
-	.contat-frm-lft {
-	    width: auto;
-	    margin: 0 15px;
-	    margin-top: -115px;
-	    background: #fff;
-	    position: relative;
-	    border:1px solid#CCCCCC;
 	    padding-bottom: 25px;
+	    border:1px solid#CCCCCC;
+	    margin-top: -115px;
 	}
 	.input-field-col input[type="text"],
 	.input-field-col input[type="email"],
@@ -416,6 +425,20 @@ we-accept-sec-wrp
 	.we-accept-sec-wrp {
 	    padding: 50px 0 25px;
 	}
+	.contat-frm-dsc p {
+	    line-height: 1.4;
+	    margin-bottom: 20px;
+	}
+	.contact-title {
+	    margin-bottom: 15px;
+	}
+	.contact-info-title {
+	    margin-bottom: 55px;
+	    padding-left: 45px;
+	}
+	.we-accept-title {
+	    line-height: 1.3;
+	}
 }
 
 @media(max-width: 575px){	
@@ -438,12 +461,25 @@ we-accept-sec-wrp
 	.contact-info-title {
 	    margin-bottom: 50px;
 	}
+	.contact-title.fl-h2 {
+	    font-size: 28px;
+	}
+	.contact-title {
+	    padding-left: 40px;
+	}
+	.contact-info-title {
+	    margin-bottom: 50px;
+	    padding-left: 40px;
+	}
+
 	
 }
 
 @media(max-width: 479px){
-
-
+	.contact-title.fl-h2 {
+	    font-size: 26px;
+	    padding-left: 35px;
+	}
 }
 
 @media(max-width: 359px){
