contact page fix

--- a/themes/mypiggyback/assets/css/_contact.css
+++ b/themes/mypiggyback/assets/css/_contact.css
@@ -365,6 +365,7 @@ we-accept-sec-wrp
 	.contat-frm-wrp {
 	    padding-top: 40px;
 	    max-width: 100%;
+	    width: 100%;
 	    background: #fff;
 	    padding-left: 20px;
 	    padding-right: 20px;
