--- a/themes/mypiggyback/assets/css/_services.css
+++ b/themes/mypiggyback/assets/css/_services.css
@@ -10,6 +10,7 @@
 	display: flex;
 	width: 50%;
 	align-items: center;
+	padding-right: 14px;
 }
 .s-f-img-cntrl {
     position: relative;
@@ -56,12 +57,12 @@
 .services-item-cntrl:nth-child(2n+2) .serv-fea-img{
 	order: 2;
 	height: 100%;
+	padding-left: 14px;
+	padding-right: 0;
 }
 .services-item-cntrl:nth-child(2n+2) .serv-fea-img .s-f-img-cntrl{
 	margin-right: auto;
 	margin-left: initial;
-	margin-left: 29px;
-	
 }
 .services-item-cntrl:nth-child(2n+2) .serv-fea-img .s-f-img-cntrl .emrs{
 	left: 0;
@@ -186,6 +187,10 @@
 	.serv-fea-img{
 		width: 100%;
 		padding-bottom: 37px;
+		padding-right: 0;
+	}
+	.services-item-cntrl:nth-child(2n+2) .serv-fea-img{
+		padding-left: 0;
 	}
 	.sic{
 		width: 100%;
