--- a/themes/mypiggyback/assets/css/_home-3.css
+++ b/themes/mypiggyback/assets/css/_home-3.css
@@ -354,14 +354,15 @@
 }
 
 @media(max-width: 767px){
-/*	.home-page-bnr-con-cntlr{
+	.home-page-bnr-con-cntlr{
 		position: static;
 	}
 	.loc-searching-form-cntlr{
 		position: absolute;
 		left: 20px;
 		top: 20px;
-	}*/
+	}
+	.home-page-bnr
 }
 
 @media(max-width: 575px){
