--- a/themes/mypiggyback/assets/css/_header.css
+++ b/themes/mypiggyback/assets/css/_header.css
@@ -49,7 +49,7 @@
 	margin-bottom: 0;
 }
 .top-bar-rt ul li a:hover{
-	opacity: 0.7;
+	opacity: 0.9;
 }
 .top-bar-rt ul li.hdr-tel a{
 	padding-left: 24px;
@@ -253,4 +253,62 @@ nav.main-nav > ul > li.menu-item-has-children ul.sub-menu li:hover a{
 }
 .hdr-order-icon i{
 	display: inline-block;
+}
+
+
+/*responsive*/
+@media(max-width: 1199px){
+	.hdr-lft{
+		left: 0;
+	}
+	nav.main-nav > ul{
+		margin: 0 -10px;
+	}
+	nav.main-nav > ul > li{
+		padding-left: 10px;
+		padding-right: 10px;
+		line-height: auto;
+	}
+	nav.main-nav > ul > li > a{
+		font-size: 16px;
+	}
+	nav.main-nav > ul > li.current-menu-item > a:before{
+		top: -5px;
+		margin-right: -7px;
+	}
+}
+@media(max-width: 991px){
+	.top-bar-left p{
+		font-size: 16px;
+	}
+	nav.main-nav > ul{
+		margin: 0 -7px;
+	}
+	nav.main-nav > ul > li{
+		padding-left: 7px;
+		padding-right: 7px;
+		line-height: auto;
+	}
+	nav.main-nav > ul > li > a{
+		font-size: 14px;
+	}
+}
+@media(max-width: 767px){
+	.top-bar-left p{
+		font-size: 14px;
+	}
+}
+@media(max-width: 639px){
+
+}
+@media(max-width: 575px){
+	.top-bar-left p{
+		font-size: 12px;
+	}
+}
+@media(max-width: 479px){
+
+}
+@media(max-width: 359px){
+
 }
