--- a/themes/mypiggyback/assets/css/_services.css
+++ b/themes/mypiggyback/assets/css/_services.css
@@ -1,5 +1,5 @@
 .services-page {
-    padding-bottom: 63px;
+   
 }
 .services-item-cntrl{
 	display: flex;
@@ -69,6 +69,13 @@
 }
 .services-item-cntrl:nth-child(2n+2) .serv-fea-img .s-f-img-cntrl .emrs{
 	left: 0;
+}
+.services-item-cntrl:last-child{
+	background-image: url('../images/testimonials-bg-img.png');
+	background-repeat: no-repeat;
+	background-position: bottom center;
+	background-size: cover;
+	padding-bottom: 63px;
 }
 .services-item-cntrl:nth-child(2n+2) .sic{
 	order: 1;
@@ -172,7 +179,7 @@
 }
 
 @media(max-width: 767px){
-	.services-page {
+	.services-item-cntrl:last-child {
     	padding-bottom: 99px;
 	}
 	.services-item-cntrl{
