--- a/themes/mypiggyback/assets/css/_home-3.css
+++ b/themes/mypiggyback/assets/css/_home-3.css
@@ -363,18 +363,60 @@
 		top: 20px;
 	}
 	.home-page-bnr{
-		background: ;
+		background: #f9f9f9;
+		padding-bottom: 25px;
+	}
+	.bnr-booking-form-cntlr {
+	    max-width: 350px;
+	    margin-left: auto;
+	    margin-right: auto;
+	    margin-top: -115px;
+	}
+	.home-page-bnr iframe {
+	    height: 500px;
 	}
 }
 
 @media(max-width: 575px){
-
-
+	
 }
 
 @media(max-width: 479px){
-
-
+	.loc-searching-form-cntlr .input-field-row input{
+		font-size: 11px;
+	}
+	.loc-distance-miles div strong{
+		font-size: 15px;
+	}
+	.loc-distance-miles div span{
+		font-size: 13px;
+	}
+	.loc-distance-miles {
+	    width: 55px;
+	    height: 55px;
+	}
+	.loc-searching-form-cntlr form{
+		margin-right: 70px;
+	}
+	.loc-searching-form-cntlr {
+	    max-width: 280px;
+	}
+	.loc-searching-form-cntlr .input-field-row span{
+		width: 30px;
+		height: 32px;
+	}
+	.loc-searching-form-cntlr form{
+		height: 64px;
+	}
+	.loc-searching-form-cntlr .input-field-row input{
+		padding-left: 40px;
+	}
+	.destination-switcher-button{
+		left: 32px;
+	}
+	.destination-switcher-button i{
+		
+	}
 }
 
 @media(max-width: 359px){
