--- a/themes/mypiggyback/assets/css/_footer.css
+++ b/themes/mypiggyback/assets/css/_footer.css
@@ -237,6 +237,10 @@
 
 .ftr-btm-menu{
 	margin-left: auto;
+	order: 2;
+}
+.ftr-btm-copywrite{
+	order: 1;
 }
 .ftr-btm-menu ul{
 	margin-left: -12px;
@@ -310,22 +314,6 @@
 	.ftr-logo-title{
 		display: block;
 	}
-}
-
-@media(max-width: 767px){
-	.ftr-logo-ctlr, 
-	.ftr-col-1, 
-	.ftr-col-2, 
-	.ftr-col-3{
-		width: 100%;
-	}
-	.ftr-menu-location a br{
-		display: none;
-	}
-	.ftr-menu > ul > li{
-		float: left;
-		width: 50%;
-	}
 	.ftr-btm-inr{
 		display: block;
 	}
@@ -334,16 +322,75 @@
 	}
 	.ftr-btm-menu{
 		text-align: center;
+		margin-bottom: 18px;
 	}
 }
 
-@media(max-width: 575px){
+@media(max-width: 767px){
+	.ftr-logo-ctlr, 
+	.ftr-col-1, 
+	.ftr-col-2, 
+	.ftr-col-3{
+		width: 100%;
+		padding-right: 0;
+	}
+	.ftr-menu-location a br{
+		display: none;
+	}
+	.ftr-menu > ul > li{
+		float: left;
+		width: 50%;
+	}
+	.ftr-logo-ctlr{
+		margin-bottom: 35px;
+	}
+	.ftr-col-1{
+		margin-bottom: 80px;
+	}
+	.ftr-col-2{
+		margin-bottom: 65px;
+	}
+	.ftr-col-3{
+		margin-bottom: 30px;
+	}
+	.ftr-logo-ctlr p, .ftr-menu p,
+	.ftr-menu > ul > li > a{
+		font-size: 13px;
+	}
+	.ftr-menu-location a br{
+		display: none;
+	}
 	
+}
+
+@media(max-width: 575px){
+	.ftr-col-3{
+		margin-bottom: 15px;
+	}
 
 }
 
 @media(max-width: 479px){
-
+	.ftr-col-3{
+		margin-bottom: 0;
+	}
+	.ftr-btm-menu ul li{
+		padding-left: 6px;
+		padding-right: 6px;
+	}
+	.ftr-btm-menu ul li:first-child{
+		padding-left: 0;
+	}
+	.ftr-btm-menu ul li:last-child{
+		padding-right: 0;
+	}
+	.ftr-btm-menu ul li a{
+		font-size: 10px;
+	}
+	.ftr-btm-copywrite p{
+		font-size: 12px;
+		line-height: 1.2;
+	}
 
 }
 
