--- a/themes/mypiggyback/assets/css/_header.css
+++ b/themes/mypiggyback/assets/css/_header.css
@@ -6,7 +6,7 @@
 	padding: 13px 0;
 	
 	position: relative;
-}.top-bar span{
+}.top-bar > span{
 	position: absolute;
 	bottom: 0;
 	right: 0;
@@ -321,6 +321,9 @@ nav.main-nav > ul > li.menu-item-has-children ul.sub-menu li:hover a{
 		top: -5px;
 		margin-right: -7px;
 	}
+	.hdr-order-icon{
+		top: -4px;
+	}
 }
 @media(max-width: 991px){
 	.top-bar-left p{
@@ -361,6 +364,11 @@ nav.main-nav > ul > li.menu-item-has-children ul.sub-menu li:hover a{
 		align-items: center;
 	}
 	.hdr-menu{
+		position: absolute;
+		left: 0;
+		right: 0;
+		top: 100%; 
+		z-index: 9999;
 		display: none;
 	}
 	.logo a{
