--- a/themes/mypiggyback/assets/css/_header.css
+++ b/themes/mypiggyback/assets/css/_header.css
@@ -393,6 +393,7 @@ nav.main-nav > ul > li.menu-item-has-children ul.sub-menu li:hover a{
 		display: none;
 		padding: 50px 0 0 0;
 		background: #fff;
+		border-top: 2px solid #F2101C;
 	}
 	.logo a{
 		max-width: 135px;
@@ -449,6 +450,10 @@ nav.main-nav > ul > li.menu-item-has-children ul.sub-menu li:hover a{
 		left: 50%;
 		top: 50%;
 		transform: translate(-50%,-50%);
+		-webkit-transform: translate(-50%,-50%);
+		-moz-transform: translate(-50%,-50%);
+		-o-transform: translate(-50%,-50%);
+		-ms-transform: translate(-50%,-50%);
 	}
 
 
@@ -490,6 +495,36 @@ nav.main-nav > ul > li.menu-item-has-children ul.sub-menu li:hover a{
 		-ms-box-shadow:initial;
 		-webkit-box-shadow:initial;
 		display: none;
+	}
+	nav.main-nav > ul > li.menu-item-has-children > a{
+		padding-right: 20px;
+		position: relative;
+	}
+	nav.main-nav > ul > li.menu-item-has-children > a:after {
+		content: "\f107"!important;
+		font-family: 'Font Awesome 5 Free';
+		font-weight: 600;
+		text-decoration: inherit;
+		color: #141414;
+		font-size: 19px;
+		padding-right: 0;
+		position: absolute;
+		top: 0;
+		right: 0;
+		line-height: 15px;
+		transition: all 0.5s;
+		-ms-transition: all 0.5s;
+		-webkit-transition: all 0.5s;
+	}
+	nav.main-nav > ul > li.menu-item-has-children.sub-menu-arrow > a:after{
+		transform: rotate(-180deg);
+		-o-transform: rotate(-180deg);
+		-ms-transform: rotate(-180deg);
+		-webkit-transform: rotate(-180deg);
+	}
+	
+	nav.main-nav > ul > li.menu-item-has-children ul.sub-menu li{
+		border-bottom: 0;
 	}
 	nav.main-nav > ul > li.menu-item-has-children ul.sub-menu li a{
 		padding: 5px 0 3px 0;
