--- a/themes/mypiggyback/assets/css/_home-3.css
+++ b/themes/mypiggyback/assets/css/_home-3.css
@@ -239,7 +239,7 @@
 	background: #c10913;
 }
 .input-field-row-submit{
-	margin-bottom: 0;
+	padding-bottom: 0!important;
 }
 .bnr-booking-form-tabs-col-cntlr{
 	display: flex;
@@ -371,6 +371,8 @@
 	    margin-left: auto;
 	    margin-right: auto;
 	    margin-top: -115px;
+	    box-shadow: none;
+	    border: 1px solid #CCCCCC;
 	}
 	.home-page-bnr iframe {
 	    height: 500px;
@@ -378,7 +380,41 @@
 }
 
 @media(max-width: 575px){
-	
+	.vehicle-form {
+	    padding: 20px 22px 25px;
+	}
+	.vehicle-form input[type="text"]{
+		height: 42px;
+		font-size: 14px;
+	}
+	.vehicle-form .input-field-row {
+	    padding-bottom: 14px;
+	}
+	.bnr-booking-form-tabs .tab-link {
+	    font-size: 14.5px;
+	}
+	.bnr-booking-form-tabs .tab-link{
+		height: 50px;
+	}
+	.bnr-booking-form-tabs .tab-link:after {
+	    border-left: 26px solid transparent;
+	    border-right: 26px solid transparent;
+	    border-top: 13px solid #D61225;
+	    opacity: 0;
+	    margin-top: -1px;
+	}
+	.bnr-booking-form-tabs .tab-link i{
+		width: 18px;
+		height: 18px;
+	}
+	.bnr-booking-form-tabs .tab-link i svg{
+		width: 3px!important;
+		height: auto!important;
+	}
+	.vehicle-form input[type="submit"]{
+		height: 45px;
+		font-size: 16px;
+	}
 }
 
 @media(max-width: 479px){
@@ -416,6 +452,9 @@
 	}
 	.destination-switcher-button i{
 		
+	}
+	.bnr-booking-form-tabs .tab-link {
+	    font-size: 13.5px;
 	}
 }
 
