--- a/themes/mypiggyback/assets/css/_header.css
+++ b/themes/mypiggyback/assets/css/_header.css
@@ -391,7 +391,7 @@ nav.main-nav > ul > li.menu-item-has-children ul.sub-menu li:hover a{
 		z-index: 9999;
 		margin-top: -1px;
 		display: none;
-		padding: 50px 0 0 0;
+		padding: 40px 0 35px 0;
 		background: #fff;
 		border-top: 2px solid #F2101C;
 	}
