--- a/themes/mypiggyback/assets/css/_contact.css
+++ b/themes/mypiggyback/assets/css/_contact.css
@@ -9,8 +9,8 @@ Contact page
 .contact-form-sec{
 	position: relative;
 	z-index: 3;
-	min-height: 700px;
 }
+
 .contat-frm-wrp {
     padding-right: 30px;
     padding-top: 80px;
@@ -27,6 +27,9 @@ Contact page
     top: 0;
     bottom: 0;
     z-index: 1;
+}
+.contact-map iframe{
+	height: 100%;
 }
 .contact-title {
     padding-left: 60px;
@@ -70,7 +73,12 @@ Contact page
 	font-family: 'GoboldExtra2';
 	cursor: pointer;
 	letter-spacing: 2px;
-	text-shadow: 1px 3px 2px rgba(212,0,53,0.65);
+	text-shadow: 1.27px 1px 1.27px rgba(212,0,53,0.65);
+}
+.fl-red-btn.fl-contct-btn:hover{
+	background: #c10913;
+	color: #fff;
+	border-color: #c10913;
 }
 .input-field-col input[type="text"]:focus,
 .input-field-col input[type="email"]:focus,
@@ -125,7 +133,12 @@ contact-info-sec-wrp
 .contact-info-bg{
 	position: absolute;
 	right: 0;
+	left: 0;
+	top: 0;
 	bottom: -1px;
+	background-position: right bottom!important;
+	background-size: 1400px auto!important;
+	background-repeat: no-repeat!important;
 }
 .contact-info-title{
 	margin-bottom: 75px;
@@ -243,12 +256,14 @@ we-accept-sec-wrp
 	.we-accept-rgt ul li {
 	    padding: 0 4px;
 	}
+	.contact-info-box a{
+		font-size: 19px;
+	}
 }
 
 @media(max-width: 1199px){
 	.contat-frm-wrp {
 	    padding-left: 0;
-	    padding-right: 15px;
 	}
 	.contact-title {
 	    margin-bottom: 20px;
@@ -257,9 +272,7 @@ we-accept-sec-wrp
 	.contact-info-sec-wrp {
 	    padding: 100px 0 120px;
 	}
-	.contact-info-box a br{
-		display: none;
-	}
+
 	.contact-info-box {
 	    padding: 20px 20px 30px;
 	}
@@ -291,13 +304,17 @@ we-accept-sec-wrp
 	.contat-frm-dsc p {
 	    line-height: 1.8;
 	}
+	.contact-info-bg{
+		background-size: 1200px auto!important;
+	}
+	.we-accept-rgt ul li{
+		padding-left: 8px;
+		padding-right: 8px;
+	}
 
 }
 
 @media(max-width: 991px){
-	.breadcumbs {
-	    padding-top: 13px;
-	}
 	.breadcumbs ul li{
 		font-size: 15px;
 	}
@@ -334,6 +351,16 @@ we-accept-sec-wrp
 	    margin-bottom: 65px;
 	    padding-left: 50px;
 	}
+	.contat-frm-wrp{
+		padding-right: 20px;
+	}
+	.input-field-col input[type="text"], .input-field-col input[type="email"],
+	.fl-contct-btn.fl-contct-btn{
+		height: 55px;
+	}
+	.contact-info-bg{
+		background-size: 1440px auto!important;
+	}
 }
 
 @media(max-width: 767px){
@@ -343,15 +370,12 @@ we-accept-sec-wrp
 	.breadcumbs ul li:after{
 		top: 0;
 	}
-	.breadcumbs {
-	    padding-top: 7px;
-	}
 	.page-banner-sec-wrp {
 	    padding: 24px 0 20px;
 	}
 	.contact-map {
-	    width: 100%;
-	    position: static;
+	    width: 100%!important;
+	    position: static!important;
 	}
 	.contat-frm-cntlr{
 		width: 100% !important;
@@ -364,7 +388,7 @@ we-accept-sec-wrp
 	}
 	.contat-frm-wrp {
 	    padding-top: 40px;
-	    max-width: 100%;
+	    max-width: 550px;
 	    width: 100%;
 	    background: #fff;
 	    padding-left: 20px;
@@ -372,6 +396,8 @@ we-accept-sec-wrp
 	    padding-bottom: 25px;
 	    border:1px solid#CCCCCC;
 	    margin-top: -115px;
+	    margin-left: auto;
+	    margin-right: auto;
 	}
 	.input-field-col input[type="text"],
 	.input-field-col input[type="email"],
@@ -379,6 +405,9 @@ we-accept-sec-wrp
 	    height: 40px;
 	    font-size: 14px;
 	    padding: 10px 15px;
+	}
+	.fl-contct-btn.fl-contct-btn {
+	    height: 44px;
 	}
 	.input-field-col textarea{
 		height: 120px;
@@ -417,7 +446,7 @@ we-accept-sec-wrp
 	    justify-content: center;
 	    align-items: center;
 	    flex-wrap: wrap;
-	    max-width: 340px;
+	    max-width: 100%;
 	    width: 100%;
 	}
 	.we-accept-rgt ul li {
@@ -440,6 +469,29 @@ we-accept-sec-wrp
 	.we-accept-title {
 	    line-height: 1.3;
 	}
+	.contact-info-box a br{
+		display: none;
+	}
+	.contact-info-box-title i{
+		width: 57px;
+		height: 57px;
+	}
+	.contact-info-box-title.fl-h3{
+		font-size: 24px;
+	}
+	.contact-info-bg{
+		background-size: 1050px auto!important;
+	}
+	.we-accept-title.left-icon-title.fl-h4{
+		text-align: center;
+		padding-left: 0;
+		line-height: 1.5;
+	}
+	.we-accept-title i{
+		position: relative;
+		top: -1px;
+		transform: initial;
+	}
 }
 
 @media(max-width: 575px){	
@@ -448,16 +500,16 @@ we-accept-sec-wrp
 	    padding: 0 0 30px;
 	}
 	.contact-info-box {
-	    padding: 20px 20px 30px 60px;
+	    padding: 27px 20px 30px 60px;
 	}
 	.contact-info-box-title{
 		padding-left: 60px;
 		margin-left: -62px;
 	}
-	.contact-info-box-title i{
-		width: 50px;
-		height: 50px;
-		top: -22px;
+	.contact-info-box-title i {
+	    width: 50px;
+	    height: 50px;
+	    top: -29px;
 	}
 	.contact-info-title {
 	    margin-bottom: 50px;
@@ -472,14 +524,30 @@ we-accept-sec-wrp
 	    margin-bottom: 50px;
 	    padding-left: 40px;
 	}
-
-	
+	.contact-map iframe {
+	    height: 340px;
+	}
+	.contact-info-box-title.fl-h3 {
+	    font-size: 24px;
+	}
+	.contact-info-bg{
+		background-size: 950px auto!important;
+	}
+	.contact-info-box a br{
+		display: block;
+	}
+	.we-accept-title.left-icon-title.fl-h4{
+		font-size: 22px;
+	}
 }
 
 @media(max-width: 479px){
 	.contact-title.fl-h2 {
 	    font-size: 26px;
 	    padding-left: 35px;
+	}
+	.contact-info-box a br{
+		display: none;
 	}
 }
 
