--- a/themes/mypiggyback/assets/css/_vehicle-recovery.css
+++ b/themes/mypiggyback/assets/css/_vehicle-recovery.css
@@ -109,11 +109,11 @@
 	padding: 0!important;
 	width: auto!important;
 	height: 26px;
-	margin: 0 3!important;
+	margin: 0 -3px!important;
 }
 .testimonials-slider.slick-slider ul.slick-dots li{
 	font-size: 16px;
-	padding: 0 3!important;
+	padding: 0 3px!important;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -131,6 +131,16 @@
 }
 
 /*responsive*/
+@media(max-width: 1299px){
+	.super-piggs-img img{
+		max-width: 320px;
+	}
+}
+@media(max-width: 1199px){
+	.super-piggs-img img{
+		max-width: 250px;
+	}
+}
 @media(max-width: 991px){
 	.order-pgbk-home .vcl-right-wrap{
 		padding-left: 20px;
@@ -138,6 +148,10 @@
 	.vr-piggyback-sec{
 		padding-bottom: 80px;
 	}
+	.testimonials-cntlr{
+		padding-bottom: 200px;
+	}
+
 }
 @media(max-width: 767px){
 	.vr-piggyback-sec{
@@ -181,6 +195,13 @@
 	.vr-Vehicle-sec .Vehicle-sec{
 		background: #f9f9f9;
 		padding-bottom: 45px;
+	}
+	.testimonials-slider{
+		padding-bottom: 70px;
+	}
+	.testimonials-slider.slick-slider ul.slick-dots{
+		right: initial!important;
+		left: 0!important;
 	}
 }
 @media(max-width: 575px){
