--- a/themes/mypiggyback/assets/css/_home2.css
+++ b/themes/mypiggyback/assets/css/_home2.css
@@ -158,6 +158,12 @@ ol li::before {
 		padding-top: 85px;
 		padding-bottom: 80px;
 	}
+	.default-page-con ul li, ul li{
+		padding: 5px 0 15px 20px;
+	}
+	.default-page-con ul li::before, ul li::before{
+		font-size: 12px;
+	}
 
 }
 
